cabal-version:   3.0
name:            rf-analyzer
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          DaltonMo
maintainer:      dalton.mosley@proton.me
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable rf-analyzer
    import:           warnings
    main-is:          Main.hs
    other-modules:    Analyzer, Types
    build-depends:    base ^>=4.18.3.0
                    , cassava
                    , bytestring
                    , vector
    hs-source-dirs:   app
    default-language: Haskell2010
